crates/hir-ty/tests/snapshots/resolve_snapshots__enclosing_type_parameters.snap
---
source: crates/hir-ty/tests/resolve_snapshots.rs
expression: out
---
SOURCE:

package com.example;
class Outer<T> {
    class Inner {
        T innerValue;
    }
}

RESOLVED:
field innerValue: T
