crates/hir-ty/tests/snapshots/resolve_snapshots__fully_qualified_reference.snap
---
source: crates/hir-ty/tests/resolve_snapshots.rs
expression: out
---
SOURCE:

package com.example;
class Box {
    java.util.List<String> fq;
}

RESOLVED:
field fq: java.util.List<java.lang.String>
