crates/hir-ty/tests/snapshots/resolve_snapshots__recursive_bound.snap
---
source: crates/hir-ty/tests/resolve_snapshots.rs
expression: out
---
SOURCE:

package com.example;
class Box<T extends Comparable<T>> {
    T value;
}

RESOLVED:
field value: T | bounds: java.lang.Comparable<T> | erasure: java.lang.Comparable
