crates/hir-ty/tests/snapshots/resolve_snapshots__type_parameters.snap
---
source: crates/hir-ty/tests/resolve_snapshots.rs
expression: out
---
SOURCE:

package com.example;
class Box<T> {
    T value;
    <U> U convert(U u) { return u; }
}

RESOLVED:
field value: T
method convert: U(U)
