crates/hir-ty/tests/snapshots/resolve_snapshots__unresolved_names.snap
---
source: crates/hir-ty/tests/resolve_snapshots.rs
expression: out
---
SOURCE:

package com.example;
class Util {}
class Box {
    Util helper;
    MissingType missing;
}

RESOLVED:
field helper: com.example.Util
field missing: com.example.MissingType
